feat(reindex): align ongoing indexing for new database structure (#653)
Closes: MSEARCH-802